manifests/sonar/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: praveensathelli11-dev
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
