manifests/sonar/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  namespace: praveensathelli11-dev
spec:
  to:
    kind: Service
    name: sonarqube
  port:
    targetPort: 9000
